# pyDEMONEXT

./: README.md
Config/: demonext.txt
Config/STI/: HomePointXP_OSU_2015.PXP  ParkPointXP_OSU_2019.PXP  SiTech_SRO.cfg
Sandbox/: CameraSandbox.ipynb  DarkTest.ipynb  ObsFile_Sandbox.ipynb  ObservationSandbox.ipynb  SRO_Sandbox.ipynb  Site_Sandbox.ipynb  TelescopeSandbox.ipynb  readme.md  telDemo.py
Sandbox/raritanPDU/: outletOnOff.py  pduInletStats.py  pduStatus.py  raritanPDU.py  raritanPDU.txt  readme.md
Scripts/: readme.md
demonext/: pyproject.toml  readme.md  releases.md
demonext/demonext/: camera.py
